Bug 505876 - Global Menu widget unable to search
Summary: Global Menu widget unable to search
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Global Menu widget (other bugs)
Version First Reported In: 6.4.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: regression
: 507041 (view as bug list)
Depends on:
Blocks:
 
Reported: 2025-06-20 23:07 UTC by amy
Modified: 2025-07-22 14:44 UTC (History)
8 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.4.4
Sentry Crash Report:


Attachments
Screen recording of strange search behavior when re-triggering the search action (1.03 MB, video/webm)
2025-06-24 19:43 UTC, amy
Details

Note You need to log in before you can comment on or make changes to this bug.
Description amy 2025-06-20 23:07:16 UTC
SUMMARY
The "Search" action in the Global Menu plasmoid on Wayland does not function as expected. When first opening the search action, it appears to behave how it should. When typing text into the search field, nothing appears. Closing and reopening the search action, or hovering over other menu actions and returning to the search action, has strange results based on the content of the search field. The search field itself is sometimes pushed out of visibility based on the length of the actions list.

STEPS TO REPRODUCE
1. Have a Global Menu widget, and use Wayland
2. Open an application that exports its menu, such as Dolphin
3. Click on the "Search" action in the Global Menu widget
4. Type into the search field
5. Observe no results
6. Close and reopen, or hover over another action then return to the search action
7. Observe strange results

OBSERVED RESULT

Search does not work.

EXPECTED RESULT

Search is able to return results from the menu in response to search input.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Arch Linux
KDE Plasma Version: 6.4.80 (built from master)
KDE Frameworks Version: 6.16.0 (built from master)
Qt Version: 6.9.1

ADDITIONAL INFORMATION

Issue observed both on my primary environment running Arch Linux/Plasma 6.4.0/Frameworks 6.15.0, and my KDE development VM built from master (versions listed above).
Comment 1 amy 2025-06-20 23:10:54 UTC
Additionally tested on another machine before the update to 6.4.0, running Arch Linux/KDE Plasma 6.3.5/Frameworks 6.14.0 and the search functionality worked as expected.
Comment 2 TraceyC 2025-06-24 19:28:17 UTC
I tested this using a top Application Menu and Dolphin and can reproduce the issue of search returning no results.
Search produces no results, it doesn't seem to do anything. 

I saw no other strange behavior, and was unable to reproduce the other behavior of the Search field. Would it be possible to attach a screen shot or recording of what you're seeing?

Reproduced on git-master and Fedora 42 6.4.10
Comment 3 amy 2025-06-24 19:43:14 UTC
Created attachment 182618 [details]
Screen recording of strange search behavior when re-triggering the search action

Attaching a screen recording of the strange search behavior to demonstrate the issue
Comment 4 TraceyC 2025-06-25 16:30:52 UTC
(In reply to amy from comment #3)
> Created attachment 182618 [details]
> Screen recording of strange search behavior when re-triggering the search
> action

Thanks for the recording, I see what's happening clearly. It looks like the menu under Search includes things from all the other menus (File, Tools, Help, etc)
Comment 5 Nate Graham 2025-06-25 18:44:40 UTC
Can also reproduce the issue.

This widget hasn't had thaaaaat many commits in the past few months: https://invent.kde.org/plasma/plasma-workspace/-/commits/master/applets/appmenu?ref_type=heads

If it's not one of those, it could be a Qt regression.
Comment 6 amy 2025-06-25 19:18:27 UTC
I tried putting in some debugging effort and couldn't find the cause of the issue, but what I did find is that the AppMenuModel does appear to have the correct internal state, including when searching in response to keyboard input. Logging the m_currentSearchActions for each keystroke shows the correct results. From what I can tell, the issue seems to be somewhere between adding the actions to the searchAction menu and displaying the menu on the screen, or signaling that the state has changed.
Comment 7 Bug Janitor Service 2025-07-01 18:16:54 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/5650
Comment 8 Antonio Rojas 2025-07-14 19:11:44 UTC
*** Bug 507041 has been marked as a duplicate of this bug. ***
Comment 9 Bug Janitor Service 2025-07-18 20:07:30 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/5690
Comment 10 Bug Janitor Service 2025-07-21 09:40:48 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/5693
Comment 11 Niccolò Venerandi 2025-07-22 14:43:13 UTC
Git commit 5f18319f3bf15c5d92321473850b3fbae6a2f5b5 by Niccolò Venerandi.
Committed on 22/07/2025 at 14:42.
Pushed by niccolove into branch 'master'.

Reparent menu actions to the temporarily created QMenu in global menu

Otherwise, the search action will try to manipulate the menu of the
search action, but it will only change the empty one, and not the one
that we are displaying. By reparenting we make sure that all changes
are applied to the shown menu.

M  +6    -0    applets/appmenu/lib/appmenuapplet.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/5f18319f3bf15c5d92321473850b3fbae6a2f5b5
Comment 12 Niccolò Venerandi 2025-07-22 14:43:37 UTC
Git commit e1824f2f698bb360233837df19473911b98c5b51 by Niccolò Venerandi.
Committed on 22/07/2025 at 14:43.
Pushed by niccolove into branch 'Plasma/6.4'.

Reparent menu actions to the temporarily created QMenu in global menu

Otherwise, the search action will try to manipulate the menu of the
search action, but it will only change the empty one, and not the one
that we are displaying. By reparenting we make sure that all changes
are applied to the shown menu.


(cherry picked from commit 5f18319f3bf15c5d92321473850b3fbae6a2f5b5)

Co-authored-by: Niccolò Venerandi <niccolo@venerandi.com>

M  +6    -0    applets/appmenu/lib/appmenuapplet.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/e1824f2f698bb360233837df19473911b98c5b51